@@ -2,19 +2,24 @@
 //
 // This program tests the behavior of untracked parameters in
 // ParameterSet objects.
-// $Id: UntrackedParameters_t.cpp,v 1.1 2006/02/02 15:46:27 paterno Exp $
+// $Id: UntrackedParameters_t.cpp,v 1.2 2006/02/03 21:23:01 paterno Exp $
 //----------------------------------------------------------------------
 #include <cassert>
 #include <iostream>
 #include <string>
+#include <vector>
 
 #include "FWCore/Utilities/interface/EDMException.h"
 #include "FWCore/ParameterSet/interface/ParameterSet.h"
 #include "FWCore/ParameterSet/interface/MakeParameterSets.h"
 
+using edm::ParameterSet;
+typedef std::vector<edm::ParameterSet> VPSet;
+
+
 void testUntrackedInternal()
 {
-  edm::ParameterSet p;
+  ParameterSet p;
   assert( p.empty() );
 
   // ParameterSet should not longer be empty after adding an untracked
@@ -64,6 +69,37 @@ void testUntrackedInternal()
 
 void testUntrackedFromScript()
 {
+  std::string filetext = 
+    "process TEST =\n"
+    "{\n"
+    "source = DummySource { }\n"
+    "PSet p1 = { untracked int32 a = 6 }\n"
+    "untracked PSet p2 = { int32 b = 10 }\n"
+    "untracked PSet p3 = { untracked double d = 1.5}\n"
+    "untracked VPSet vp =\n"
+    "  {\n"
+    "    { int32 i = 1 },\n"
+    "    { untracked double f = 1.5 }\n"
+    "  }\n"
+    "}\n";
+
+  boost::shared_ptr<ParameterSet> mainps;
+  boost::shared_ptr<VPSet > services;
+  edm::makeParameterSets(filetext, mainps, services);
+
+  ParameterSet p1 = mainps->getParameter<ParameterSet>("p1");
+  assert( p1.getUntrackedParameter<int>("a")  == 6 );  
+
+  ParameterSet p2 = mainps->getUntrackedParameter<ParameterSet>("p2");
+  assert( p2.getParameter<int>("b") == 10 );
+
+  ParameterSet p3 = mainps->getUntrackedParameter<ParameterSet>("p3");
+  assert( p3.getUntrackedParameter<double>("d") == 1.5);
+
+  VPSet vp = mainps->getUntrackedParameter<VPSet >("vp", VPSet());
+  assert( vp.size() == 2 );
+  assert (vp[0].getParameter<int>("i") == 1);
+  assert( vp[1].getUntrackedParameter<double>("f", 2.0) == 1.5);
 }
 
 void testTracked()
@@ -71,7 +107,7 @@ void testTracked()
 
   // If we look for an 'untracked parameter', when we have a tracked
   // one, we should get an exception throw.
-  edm::ParameterSet p;
+  ParameterSet p;
   p.addParameter<int>("a", 3);
   try
     {
